テストを修正