@@ -1,7 +1,7 @@
 package com.github.oosm032519.playlistviewernext.controller.playlist;
 
-import com.github.oosm032519.playlistviewernext.security.UserAuthenticationService;
 import com.github.oosm032519.playlistviewernext.service.playlist.SpotifyUserPlaylistCreationService;
+import org.apache.hc.core5.http.ParseException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -9,88 +9,124 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.oauth2.core.user.OAuth2User;
+import org.springframework.mock.web.MockHttpSession;
+import se.michaelthelin.spotify.exceptions.SpotifyWebApiException;
 
+import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 class PlaylistCreationControllerTest {
 
     @Mock
-    private UserAuthenticationService userAuthenticationService;
-
-    @Mock
     private SpotifyUserPlaylistCreationService spotifyUserPlaylistCreationService;
-
-    @Mock
-    private OAuth2User principal;
 
     @InjectMocks
     private PlaylistCreationController playlistCreationController;
 
+    private MockHttpSession mockSession;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
+        mockSession = new MockHttpSession();
     }
 
     @Test
-    void whenUserIsNotAuthenticated_thenReturnUnauthorized() {
-        // Arrange
-        when(userAuthenticationService.getAccessToken(principal)).thenReturn(null);
+    void createPlaylist_Success() throws IOException, ParseException, SpotifyWebApiException {
+        // テストデータの準備
+        List<String> trackIds = Arrays.asList("track1", "track2", "track3");
+        String accessToken = "testAccessToken";
+        String userId = "testUserId";
+        String displayName = "testUser";
+        String expectedPlaylistId = "newPlaylistId";
 
-        // Act
-        ResponseEntity<String> response = playlistCreationController.createPlaylist(List.of("track1", "track2"), principal);
+        // セッション属性の設定
+        mockSession.setAttribute("accessToken", accessToken);
+        mockSession.setAttribute("userId", userId);
+        mockSession.setAttribute("displayName", displayName);
 
-        // Assert
+        // モックの設定
+        when(spotifyUserPlaylistCreationService.createPlaylist(eq(accessToken), eq(userId), anyString(), eq(trackIds)))
+                .thenReturn(expectedPlaylistId);
+
+        // メソッドの実行
+        ResponseEntity<String> response = playlistCreationController.createPlaylist(trackIds, mockSession);
+
+        // 検証
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).contains(expectedPlaylistId);
+        verify(spotifyUserPlaylistCreationService).createPlaylist(eq(accessToken), eq(userId), anyString(), eq(trackIds));
+    }
+
+    @Test
+    void createPlaylist_Unauthorized() {
+        // テストデータの準備
+        List<String> trackIds = Arrays.asList("track1", "track2", "track3");
+
+        // セッション属性を設定しない（認証されていない状態をシミュレート）
+
+        // メソッドの実行
+        ResponseEntity<String> response = playlistCreationController.createPlaylist(trackIds, mockSession);
+
+        // 検証
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.UNAUTHORIZED);
         assertThat(response.getBody()).contains("認証が必要です。");
+        verifyNoInteractions(spotifyUserPlaylistCreationService);
     }
 
     @Test
-    void whenUserIsAuthenticated_thenCreatePlaylistSuccessfully() throws Exception {
-        // Arrange
-        String accessToken = "validAccessToken";
-        String userId = "userId";
-        String userName = "userName";
-        String playlistId = "newPlaylistId";
-        List<String> trackIds = List.of("track1", "track2");
+    void createPlaylist_ServiceException() throws IOException, ParseException, SpotifyWebApiException {
+        // テストデータの準備
+        List<String> trackIds = Arrays.asList("track1", "track2", "track3");
+        String accessToken = "testAccessToken";
+        String userId = "testUserId";
+        String displayName = "testUser";
 
-        when(userAuthenticationService.getAccessToken(principal)).thenReturn(accessToken);
-        when(principal.getAttribute("id")).thenReturn(userId);
-        when(principal.getAttributes()).thenReturn(Map.of("display_name", userName));
-        when(spotifyUserPlaylistCreationService.createPlaylist(eq(accessToken), eq(userId), any(String.class), eq(trackIds))).thenReturn(playlistId);
+        // セッション属性の設定
+        mockSession.setAttribute("accessToken", accessToken);
+        mockSession.setAttribute("userId", userId);
+        mockSession.setAttribute("displayName", displayName);
 
-        // Act
-        ResponseEntity<String> response = playlistCreationController.createPlaylist(trackIds, principal);
+        // モックの設定
+        when(spotifyUserPlaylistCreationService.createPlaylist(eq(accessToken), eq(userId), anyString(), eq(trackIds)))
+                .thenThrow(new RuntimeException("Service error"));
 
-        // Assert
-        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-        assertThat(response.getBody()).contains(playlistId);
-    }
+        // メソッドの実行
+        ResponseEntity<String> response = playlistCreationController.createPlaylist(trackIds, mockSession);
 
-    @Test
-    void whenInternalServerErrorOccurs_thenReturnInternalServerError() throws Exception {
-        // Arrange
-        String accessToken = "validAccessToken";
-        String userId = "userId";
-        String userName = "userName";
-        List<String> trackIds = List.of("track1", "track2");
-
-        when(userAuthenticationService.getAccessToken(principal)).thenReturn(accessToken);
-        when(principal.getAttribute("id")).thenReturn(userId);
-        when(principal.getAttributes()).thenReturn(Map.of("display_name", userName));
-        when(spotifyUserPlaylistCreationService.createPlaylist(eq(accessToken), eq(userId), any(String.class), eq(trackIds))).thenThrow(new RuntimeException("Some error"));
-
-        // Act
-        ResponseEntity<String> response = playlistCreationController.createPlaylist(trackIds, principal);
-
-        // Assert
+        // 検証
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
-        assertThat(response.getBody()).contains("エラー: Some error");
+        assertThat(response.getBody()).contains("エラー: Service error");
+        verify(spotifyUserPlaylistCreationService).createPlaylist(eq(accessToken), eq(userId), anyString(), eq(trackIds));
+    }
+
+    @Test
+    void createPlaylist_NullDisplayName() throws IOException, ParseException, SpotifyWebApiException {
+        // テストデータの準備
+        List<String> trackIds = Arrays.asList("track1", "track2", "track3");
+        String accessToken = "testAccessToken";
+        String userId = "testUserId";
+        String expectedPlaylistId = "newPlaylistId";
+
+        // セッション属性の設定（displayNameを設定しない）
+        mockSession.setAttribute("accessToken", accessToken);
+        mockSession.setAttribute("userId", userId);
+
+        // モックの設定
+        when(spotifyUserPlaylistCreationService.createPlaylist(eq(accessToken), eq(userId), anyString(), eq(trackIds)))
+                .thenReturn(expectedPlaylistId);
+
+        // メソッドの実行
+        ResponseEntity<String> response = playlistCreationController.createPlaylist(trackIds, mockSession);
+
+        // 検証
+        assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
+        assertThat(response.getBody()).contains(expectedPlaylistId);
+        verify(spotifyUserPlaylistCreationService).createPlaylist(eq(accessToken), eq(userId), argThat(arg -> arg.contains("あなた")), eq(trackIds));
     }
 }
